<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentClasses.initialSignIn.PersonalInfoOneFragment">

    <!-- TODO: Update blank fragment layout -->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/personalInfoOneHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18sp"
        android:text="@string/pio_personal_info_one_header"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pio_radioGroup"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/pio_housingStatusHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pio_housing_status_header"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/pio_housingStatus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28sp"
            android:entries="@array/housing_status"
            android:prompt="@string/pio_spinner_housing_status_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/personalInfoOneHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/dateOfBirthHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pio_date_birth_header"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pio_birthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateOfBirthHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pio_numberOfChildrenLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pio_radioGroup"
        android:layout_marginTop="18sp">

        <TextView
            android:id="@+id/pio_numberOfChildrenHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pio_numberOfChildrenHeader"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/pio_numberOfChildrenSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28sp"
            android:entries="@array/number_of_children"
            android:prompt="@string/pio_spinner_children_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/pio_numberOfChildrenLayout"
        android:id="@+id/pio_employmentStatusLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp">

        <TextView
            android:id="@+id/pio_employmentStatusHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pio_employmentStatusHeader"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/pio_employmentStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28sp"
            android:entries="@array/job_status"
            android:prompt="@string/pio_spinner_job_status_prompt"

            android:spinnerMode="dialog"
            android:textAlignment="center" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/pio_employmentStatusLayout"
        android:id="@+id/pio_educationLevelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp">

        <TextView
            android:id="@+id/pio_educationLevelHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pio_educationLevelHeader"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/pio_educationLevelSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28sp"
            android:entries="@array/education_status"
            android:prompt="@string/pio_spinner_education_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

    </RelativeLayout>
    <RelativeLayout
    android:layout_below="@+id/pio_educationLevelLayout"
    android:id="@+id/pio_buttonContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="18sp">

        <Button
            android:id="@+id/pio_previous"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="18sp"
            android:layout_marginTop="18sp"
            android:text="@string/prev_btn"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginLeft="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pio_next"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginRight="10sp"
            android:text="@string/next_btn"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>


    </ScrollView>

</RelativeLayout>
