<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentClasses.initialSignIn.ContactInfoFragment"
    android:rowCount="4"
    android:columnCount="4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ci_prefered_contact_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp">

        <Button
            android:id="@+id/ci_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_btn" />

        <Button
            android:id="@+id/ci_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <EditText
        android:id="@+id/ci_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/ci_contactHeader"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/ci_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/ci_email"
        android:layout_alignStart="@+id/ci_email" />

    <Spinner
        android:id="@+id/ci_prefered_contact_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/ci_contactHeader2"
        android:layout_alignParentStart="true"
        android:entries="@array/ci_preferred_contact_method"
        android:spinnerMode="dialog"
        android:prompt="@string/ci_spinner_prompt"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/ci_contactHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/ci_contactHeader2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/ci_email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="125dp" />

    <TextView
        android:id="@+id/ci_contactHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/ci_contactHeader"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
        </RelativeLayout>
</ScrollView>
</RelativeLayout>
